feat: issuer based endpoints
