# src/main/java/org/tkit/onecx/iam/kc/rs/external/v1/controllers/AdminRestControllerV1.java
@@ -14,6 +14,7 @@ import org.tkit.quarkus.log.cdi.LogService;
 
 import gen.org.tkit.onecx.iam.kc.v1.AdminControllerApi;
 import gen.org.tkit.onecx.iam.kc.v1.model.ProblemDetailResponseDTOV1;
+import gen.org.tkit.onecx.iam.kc.v1.model.UserRolesSearchRequestDTOV1;
 
 @LogService
 @ApplicationScoped
@@ -29,12 +30,14 @@ public class AdminRestControllerV1 implements AdminControllerApi {
     RoleMapper mapper;
 
     @Override
-    public Response getUserRoles(String provider, String domain, String userId) {
-        return Response.ok().entity(mapper.map(adminService.getUserRoles(provider, domain, userId))).build();
+    public Response getUserRoles(String userId, UserRolesSearchRequestDTOV1 userRolesSearchRequestDTOV1) {
+        return Response.ok().entity(mapper.map(adminService.getUserRoles(userRolesSearchRequestDTOV1.getIssuer(), userId)))
+                .build();
     }
 
     @ServerExceptionMapper
     public RestResponse<ProblemDetailResponseDTOV1> constraint(KeycloakException ex) {
         return exceptionMapper.exception(ex);
     }
+
 }
